--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "markdown-it": "^12.0.4",
     "markdown-it-modify-token": "^1.0.2",
     "marked": "^1.2.7",
-    "next": "10.0.4",
+    "next": "^10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
