--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,8 @@
 proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=7d use_temp_path=off;
 
-# upstream nextjs_upstream {
-#     server nextjs:3000;
-# }
+upstream nextjs_upstream {
+    server nextjs:3000;
+}
 
 server {
     listen 80 default_server;
