--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,4 @@ STRAPI_PREVIEW_SECRET=1234
 API_URL=http://localhost:1337
 AMAZON_S3_IMAGES_URI=https://zyhong2021-assets.s3.eu-central-1.amazonaws.com/
 AMAZON_S3_IMAGES_DOMAIN=zyhong2021-assets.s3.eu-central-1.amazonaws.com
+ECS_REPO=617632732517.dkr.ecr.eu-central-1.amazonaws.com/journal-of-tea
