--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -25,6 +25,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
+./frontend/.env
+./strapi/.env
 .env.local
 .env.development.local
 .env.test.local
