--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "buildexport": "next build && export"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "gray-matter": "^4.0.2",
-    "gsap": "^3.6.0",
     "markdown-it": "^12.0.4",
     "markdown-it-modify-token": "^1.0.2",
     "marked": "^1.2.7",
